package template

import (
	"context"
	_ "embed"
	"fmt"
	"time"

	notificationv1 "github.com/Duke1616/ecmdb/api/proto/gen/ealert/notification/v1"
	templatev1 "github.com/Duke1616/ecmdb/api/proto/gen/ealert/template/v1"
	"github.com/Duke1616/ecmdb/cmd/initial/ioc"
	"github.com/Duke1616/ecmdb/internal/workflow"
)

//go:embed fs/approval.tmpl
var LarkApprovalTemplate string

//go:embed fs/carbon_copy.tmpl
var LarkApprovalCCTemplate string

//go:embed fs/progress.tmpl
var LarkApprovalProgressTemplate string

//go:embed fs/progress_image_result.tmpl
var LarkApprovalProgressImageResultTemplate string

//go:embed fs/revoke.tmpl
var LarkApprovalRevokeTemplate string

type InitialNotifyTemplate struct {
	App *ioc.App
}

func NewInitial(app *ioc.App) *InitialNotifyTemplate {
	return &InitialNotifyTemplate{
		App: app,
	}
}

type templateConfig struct {
	Name        string
	Desc        string
	Channel     notificationv1.Channel
	VersionName string
	Content     string
	NotifyType  workflow.NotifyType
}

func (i *InitialNotifyTemplate) InitTemplate() error {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second*30)
	defer cancel()

	fmt.Printf("ğŸ“‹ å¼€å§‹åˆå§‹åŒ–å·¥å•æ¶ˆæ¯é€šçŸ¥æ¨¡ç‰ˆ...\n")

	templates := []templateConfig{
		{
			Name:        "å·¥å•å®¡æ‰¹é€šçŸ¥",
			Desc:        "å·¥å•å®¡æ‰¹æµç¨‹é€šçŸ¥",
			Channel:     notificationv1.Channel_FEISHU_CARD,
			VersionName: "v1.0.0",
			Content:     LarkApprovalTemplate,
			NotifyType:  workflow.NotifyTypeApproval,
		},
		{
			Name:        "å·¥å•æŠ„é€é€šçŸ¥",
			Desc:        "å·¥å•æŠ„é€é€šçŸ¥",
			Channel:     notificationv1.Channel_FEISHU_CARD,
			VersionName: "v1.0.0",
			Content:     LarkApprovalCCTemplate,
			NotifyType:  workflow.NotifyTypeCC,
		},
		{
			Name:        "å·¥å•è¿›åº¦é€šçŸ¥",
			Desc:        "å·¥å•è¿›åº¦é€šçŸ¥",
			Channel:     notificationv1.Channel_FEISHU_CARD,
			VersionName: "v1.0.0",
			Content:     LarkApprovalProgressTemplate,
			NotifyType:  workflow.NotifyTypeProgress,
		},
		{
			Name:        "å·¥å•è¿›åº¦å›¾ç‰‡é€šçŸ¥",
			Desc:        "å·¥å•è¿›åº¦å›¾ç‰‡ç»“æœé€šçŸ¥",
			Channel:     notificationv1.Channel_FEISHU_CARD,
			VersionName: "v1.0.0",
			Content:     LarkApprovalProgressImageResultTemplate,
			NotifyType:  workflow.NotifyTypeProgressImageResult,
		},
		{
			Name:        "å·¥å•æ’¤å›é€šçŸ¥",
			Desc:        "å·¥å•æ’¤å›é€šçŸ¥",
			Channel:     notificationv1.Channel_FEISHU_CARD,
			VersionName: "v1.0.0",
			Content:     LarkApprovalRevokeTemplate,
			NotifyType:  workflow.NotifyTypeRevoke,
		},
	}

	for _, t := range templates {
		if err := i.processTemplate(ctx, t); err != nil {
			// é”™è¯¯å·²åœ¨å†…éƒ¨å¤„ç†å¹¶æ‰“å°ï¼Œç»§ç»­ä¸‹ä¸€ä¸ª
			continue
		}
	}

	fmt.Printf("âœ… æ‰€æœ‰å·¥å•æ¨¡ç‰ˆå¤„ç†å®Œæˆ!\n")
	return nil
}

// checkTemplateExists æ£€æŸ¥æ¨¡æ¿æ˜¯å¦å·²å­˜åœ¨
// è¿”å›: templateId, exists, error
func (i *InitialNotifyTemplate) checkTemplateExists(ctx context.Context, notifyType workflow.NotifyType, channel string) (int64, bool, error) {
	binding, err := i.App.WorkflowSvc.AdminNotifyBinding().GetEffective(ctx, 0, notifyType, channel)
	if err != nil || binding.Id == 0 {
		return 0, false, nil
	}
	return binding.TemplateId, true, nil
}

// createAndPublishTemplate åˆ›å»ºå¹¶å‘å¸ƒæ¨¡æ¿
// è¿”å›: templateId, versionId, error
func (i *InitialNotifyTemplate) createAndPublishTemplate(ctx context.Context, cfg templateConfig) (int64, int64, error) {
	// åˆ›å»ºæ¨¡æ¿
	createResp, err := i.App.TemplateClient.CreateTemplate(ctx, &templatev1.CreateTemplateRequest{
		Template: &templatev1.ChannelTemplate{
			Name:        cfg.Name,
			Description: cfg.Desc,
			Channel:     cfg.Channel,
			Versions: []*templatev1.ChannelTemplateVersion{
				{
					Name:    cfg.VersionName,
					Content: cfg.Content,
					Desc:    "åˆå§‹åŒ–ç‰ˆæœ¬",
				},
			},
		},
	})
	if err != nil {
		return 0, 0, fmt.Errorf("åˆ›å»ºæ¨¡ç‰ˆå¤±è´¥: %w", err)
	}

	templateId := createResp.Template.Id
	if len(createResp.Template.Versions) == 0 {
		return 0, 0, fmt.Errorf("åˆ›å»ºæ¨¡ç‰ˆæˆåŠŸï¼Œä½†æ²¡æœ‰è¿”å›ç‰ˆæœ¬ä¿¡æ¯")
	}
	versionId := createResp.Template.Versions[0].Id

	// å‘å¸ƒç‰ˆæœ¬
	_, err = i.App.TemplateClient.PublishTemplate(ctx, &templatev1.PublishTemplateRequest{
		TemplateId: templateId,
		VersionId:  versionId,
	})
	if err != nil {
		return 0, 0, fmt.Errorf("å‘å¸ƒæ¨¡ç‰ˆç‰ˆæœ¬å¤±è´¥: %w", err)
	}

	return templateId, versionId, nil
}

// createNotifyBinding åˆ›å»ºé€šçŸ¥ç»‘å®š
func (i *InitialNotifyTemplate) createNotifyBinding(ctx context.Context, notifyType workflow.NotifyType, channel string, templateId int64) error {
	_, err := i.App.WorkflowSvc.AdminNotifyBinding().Create(ctx, workflow.NotifyBinding{
		WorkflowId: 0, // 0 è¡¨ç¤ºé»˜è®¤å…¨å±€é…ç½®
		NotifyType: notifyType,
		Channel:    channel,
		TemplateId: templateId,
	})
	return err
}

// createNewVersionAndPublish ä¸ºå·²å­˜åœ¨çš„æ¨¡æ¿åˆ›å»ºæ–°ç‰ˆæœ¬å¹¶å‘å¸ƒ
// è¿”å›: versionId, error
func (i *InitialNotifyTemplate) createNewVersionAndPublish(ctx context.Context, templateId int64, cfg templateConfig) (int64, error) {
	// åˆ›å»ºæ–°ç‰ˆæœ¬
	createVerResp, err := i.App.TemplateClient.CreateTemplateVersion(ctx, &templatev1.CreateTemplateVersionRequest{
		TemplateId: templateId,
		Name:       cfg.VersionName,
		Content:    cfg.Content,
		Desc:       "åˆå§‹åŒ–æ›´æ–°ç‰ˆæœ¬",
	})
	if err != nil {
		return 0, fmt.Errorf("åˆ›å»ºæ–°ç‰ˆæœ¬å¤±è´¥: %w", err)
	}

	// è·å–æ–°åˆ›å»ºçš„ç‰ˆæœ¬ID
	if createVerResp.Version == nil {
		return 0, fmt.Errorf("åˆ›å»ºæ–°ç‰ˆæœ¬æˆåŠŸï¼Œä½†æ²¡æœ‰è¿”å›ç‰ˆæœ¬ä¿¡æ¯")
	}
	versionId := createVerResp.Version.Id

	// å‘å¸ƒæ–°ç‰ˆæœ¬
	_, err = i.App.TemplateClient.PublishTemplate(ctx, &templatev1.PublishTemplateRequest{
		TemplateId: templateId,
		VersionId:  versionId,
	})
	if err != nil {
		return 0, fmt.Errorf("å‘å¸ƒæ–°ç‰ˆæœ¬å¤±è´¥: %w", err)
	}

	return versionId, nil
}

// processTemplate å¤„ç†å•ä¸ªæ¨¡æ¿çš„åˆå§‹åŒ–æµç¨‹
func (i *InitialNotifyTemplate) processTemplate(ctx context.Context, cfg templateConfig) error {
	fmt.Printf("ğŸ”„æ­£åœ¨å¤„ç†æ¨¡ç‰ˆ: %s\n", cfg.Name)

	// 1. æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨
	existingTemplateId, exists, err := i.checkTemplateExists(ctx, cfg.NotifyType, cfg.Channel.String())
	if err != nil {
		fmt.Printf("âŒ æ£€æŸ¥æ¨¡ç‰ˆ [%s] å¤±è´¥: %v\n", cfg.Name, err)
		return err
	}

	var templateId int64
	var versionId int64

	if exists {
		// æ¨¡æ¿å·²å­˜åœ¨,åˆ›å»ºæ–°ç‰ˆæœ¬å¹¶å‘å¸ƒ
		templateId = existingTemplateId
		versionId, err = i.createNewVersionAndPublish(ctx, templateId, cfg)
		if err != nil {
			fmt.Printf("âŒ æ¨¡ç‰ˆ [%s] %v\n", cfg.Name, err)
			return err
		}
		fmt.Printf("âœ… æ¨¡ç‰ˆ [%s] å·²æ›´æ–°æ–°ç‰ˆæœ¬å¹¶å‘å¸ƒ (TemplateID: %d, VersionID: %d)\n", cfg.Name, templateId, versionId)
		return nil
	}

	// 2. åˆ›å»ºå¹¶å‘å¸ƒæ¨¡æ¿
	templateId, versionId, err = i.createAndPublishTemplate(ctx, cfg)
	if err != nil {
		fmt.Printf("âŒ æ¨¡ç‰ˆ [%s] %v\n", cfg.Name, err)
		return err
	}
	fmt.Printf("âœ… æ¨¡ç‰ˆ [%s] åˆ›å»ºå¹¶å‘å¸ƒæˆåŠŸ (TemplateID: %d, VersionID: %d)\n", cfg.Name, templateId, versionId)

	// 3. åˆ›å»º NotifyBinding
	if err = i.createNotifyBinding(ctx, cfg.NotifyType, cfg.Channel.String(), templateId); err != nil {
		fmt.Printf("âŒ åˆ›å»º NotifyBinding [%s] å¤±è´¥: %v\n", cfg.Name, err)
		return err
	}
	fmt.Printf("âœ… NotifyBinding [%s] åˆ›å»ºæˆåŠŸ\n", cfg.Name)

	return nil
}
